lab 2/y.output
Terminals unused in grammar

   EQUAL


State 9 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program statement
    2        | /* empty */

    3 statement: NEWLINE
    4          | expression
    5          | float_expression

    6 expression: I_NUMBER
    7           | expression PLUS expression
    8           | expression MINUS expression
    9           | expression MULT expression
   10           | expression DIV expression
   11           | MINUS expression
   12           | L_PAREN expression R_PAREN

   13 float_expression: F_NUMBER
   14                 | float_expression PLUS float_expression
   15                 | float_expression MINUS float_expression
   16                 | float_expression MULT float_expression
   17                 | float_expression DIV float_expression
   18                 | L_PAREN float_expression R_PAREN
   19                 | float_expression PLUS expression
   20                 | float_expression MINUS expression
   21                 | float_expression MULT expression
   22                 | float_expression DIV expression
   23                 | expression PLUS float_expression
   24                 | expression MINUS float_expression
   25                 | expression MULT float_expression
   26                 | expression DIV float_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
I_NUMBER (258) 6
F_NUMBER (259) 13
PLUS (260) 7 14 19 23
MINUS (261) 8 11 15 20 24
MULT (262) 9 16 21 25
DIV (263) 10 17 22 26
L_PAREN (264) 12 18
R_PAREN (265) 12 18
EQUAL (266)
NEWLINE (267) 3


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
program (14)
    on left: 1 2, on right: 0 1
statement (15)
    on left: 3 4 5, on right: 1
expression (16)
    on left: 6 7 8 9 10 11 12, on right: 4 7 8 9 10 11 12 19 20 21
    22 23 24 25 26
float_expression (17)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26, on right: 5
    14 15 16 17 18 19 20 21 22 23 24 25 26


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    1 program: program . statement

    $end      shift, and go to state 2
    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6
    NEWLINE   shift, and go to state 7

    statement         go to state 8
    expression        go to state 9
    float_expression  go to state 10


State 2

    0 $accept: program $end .

    $default  accept


State 3

    6 expression: I_NUMBER .

    $default  reduce using rule 6 (expression)


State 4

   13 float_expression: F_NUMBER .

    $default  reduce using rule 13 (float_expression)


State 5

   11 expression: MINUS . expression

    I_NUMBER  shift, and go to state 3
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 11

    expression  go to state 12


State 6

   12 expression: L_PAREN . expression R_PAREN
   18 float_expression: L_PAREN . float_expression R_PAREN

    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6

    expression        go to state 13
    float_expression  go to state 14


State 7

    3 statement: NEWLINE .

    $default  reduce using rule 3 (statement)


State 8

    1 program: program statement .

    $default  reduce using rule 1 (program)


State 9

    4 statement: expression .
    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   23 float_expression: expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    PLUS   shift, and go to state 15
    MINUS  shift, and go to state 16
    MULT   shift, and go to state 17
    DIV    shift, and go to state 18

    MINUS     [reduce using rule 4 (statement)]
    $default  reduce using rule 4 (statement)


State 10

    5 statement: float_expression .
   14 float_expression: float_expression . PLUS float_expression
   15                 | float_expression . MINUS float_expression
   16                 | float_expression . MULT float_expression
   17                 | float_expression . DIV float_expression
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression

    PLUS   shift, and go to state 19
    MINUS  shift, and go to state 20
    MULT   shift, and go to state 21
    DIV    shift, and go to state 22

    MINUS     [reduce using rule 5 (statement)]
    $default  reduce using rule 5 (statement)


State 11

   12 expression: L_PAREN . expression R_PAREN

    I_NUMBER  shift, and go to state 3
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 11

    expression  go to state 23


State 12

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   11           | MINUS expression .

    MULT  shift, and go to state 26
    DIV   shift, and go to state 27

    $default  reduce using rule 11 (expression)


State 13

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   12           | L_PAREN expression . R_PAREN
   23 float_expression: expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    PLUS     shift, and go to state 15
    MINUS    shift, and go to state 16
    MULT     shift, and go to state 17
    DIV      shift, and go to state 18
    R_PAREN  shift, and go to state 28


State 14

   14 float_expression: float_expression . PLUS float_expression
   15                 | float_expression . MINUS float_expression
   16                 | float_expression . MULT float_expression
   17                 | float_expression . DIV float_expression
   18                 | L_PAREN float_expression . R_PAREN
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression

    PLUS     shift, and go to state 19
    MINUS    shift, and go to state 20
    MULT     shift, and go to state 21
    DIV      shift, and go to state 22
    R_PAREN  shift, and go to state 29


State 15

    7 expression: expression PLUS . expression
   23 float_expression: expression PLUS . float_expression

    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6

    expression        go to state 30
    float_expression  go to state 31


State 16

    8 expression: expression MINUS . expression
   24 float_expression: expression MINUS . float_expression

    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6

    expression        go to state 32
    float_expression  go to state 33


State 17

    9 expression: expression MULT . expression
   25 float_expression: expression MULT . float_expression

    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6

    expression        go to state 34
    float_expression  go to state 35


State 18

   10 expression: expression DIV . expression
   26 float_expression: expression DIV . float_expression

    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6

    expression        go to state 36
    float_expression  go to state 37


State 19

   14 float_expression: float_expression PLUS . float_expression
   19                 | float_expression PLUS . expression

    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6

    expression        go to state 38
    float_expression  go to state 39


State 20

   15 float_expression: float_expression MINUS . float_expression
   20                 | float_expression MINUS . expression

    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6

    expression        go to state 40
    float_expression  go to state 41


State 21

   16 float_expression: float_expression MULT . float_expression
   21                 | float_expression MULT . expression

    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6

    expression        go to state 42
    float_expression  go to state 43


State 22

   17 float_expression: float_expression DIV . float_expression
   22                 | float_expression DIV . expression

    I_NUMBER  shift, and go to state 3
    F_NUMBER  shift, and go to state 4
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 6

    expression        go to state 44
    float_expression  go to state 45


State 23

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   12           | L_PAREN expression . R_PAREN

    PLUS     shift, and go to state 24
    MINUS    shift, and go to state 25
    MULT     shift, and go to state 26
    DIV      shift, and go to state 27
    R_PAREN  shift, and go to state 28


State 24

    7 expression: expression PLUS . expression

    I_NUMBER  shift, and go to state 3
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 11

    expression  go to state 46


State 25

    8 expression: expression MINUS . expression

    I_NUMBER  shift, and go to state 3
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 11

    expression  go to state 47


State 26

    9 expression: expression MULT . expression

    I_NUMBER  shift, and go to state 3
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 11

    expression  go to state 48


State 27

   10 expression: expression DIV . expression

    I_NUMBER  shift, and go to state 3
    MINUS     shift, and go to state 5
    L_PAREN   shift, and go to state 11

    expression  go to state 49


State 28

   12 expression: L_PAREN expression R_PAREN .

    $default  reduce using rule 12 (expression)


State 29

   18 float_expression: L_PAREN float_expression R_PAREN .

    $default  reduce using rule 18 (float_expression)


State 30

    7 expression: expression . PLUS expression
    7           | expression PLUS expression .
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   23 float_expression: expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    MULT  shift, and go to state 17
    DIV   shift, and go to state 18

    $default  reduce using rule 7 (expression)


State 31

   14 float_expression: float_expression . PLUS float_expression
   15                 | float_expression . MINUS float_expression
   16                 | float_expression . MULT float_expression
   17                 | float_expression . DIV float_expression
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression
   23                 | expression PLUS float_expression .

    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    $default  reduce using rule 23 (float_expression)


State 32

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    8           | expression MINUS expression .
    9           | expression . MULT expression
   10           | expression . DIV expression
   23 float_expression: expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    MULT  shift, and go to state 17
    DIV   shift, and go to state 18

    $default  reduce using rule 8 (expression)


State 33

   14 float_expression: float_expression . PLUS float_expression
   15                 | float_expression . MINUS float_expression
   16                 | float_expression . MULT float_expression
   17                 | float_expression . DIV float_expression
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression
   24                 | expression MINUS float_expression .

    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    $default  reduce using rule 24 (float_expression)


State 34

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
    9           | expression MULT expression .
   10           | expression . DIV expression
   23 float_expression: expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    $default  reduce using rule 9 (expression)


State 35

   14 float_expression: float_expression . PLUS float_expression
   15                 | float_expression . MINUS float_expression
   16                 | float_expression . MULT float_expression
   17                 | float_expression . DIV float_expression
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression
   25                 | expression MULT float_expression .

    $default  reduce using rule 25 (float_expression)


State 36

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   10           | expression DIV expression .
   23 float_expression: expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    $default  reduce using rule 10 (expression)


State 37

   14 float_expression: float_expression . PLUS float_expression
   15                 | float_expression . MINUS float_expression
   16                 | float_expression . MULT float_expression
   17                 | float_expression . DIV float_expression
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression
   26                 | expression DIV float_expression .

    $default  reduce using rule 26 (float_expression)


State 38

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   19 float_expression: float_expression PLUS expression .
   23                 | expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    MULT  shift, and go to state 17
    DIV   shift, and go to state 18

    $default  reduce using rule 19 (float_expression)


State 39

   14 float_expression: float_expression . PLUS float_expression
   14                 | float_expression PLUS float_expression .
   15                 | float_expression . MINUS float_expression
   16                 | float_expression . MULT float_expression
   17                 | float_expression . DIV float_expression
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression

    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    $default  reduce using rule 14 (float_expression)


State 40

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   20 float_expression: float_expression MINUS expression .
   23                 | expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    MULT  shift, and go to state 17
    DIV   shift, and go to state 18

    $default  reduce using rule 20 (float_expression)


State 41

   14 float_expression: float_expression . PLUS float_expression
   15                 | float_expression . MINUS float_expression
   15                 | float_expression MINUS float_expression .
   16                 | float_expression . MULT float_expression
   17                 | float_expression . DIV float_expression
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression

    MULT  shift, and go to state 21
    DIV   shift, and go to state 22

    $default  reduce using rule 15 (float_expression)


State 42

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   21 float_expression: float_expression MULT expression .
   23                 | expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    $default  reduce using rule 21 (float_expression)


State 43

   14 float_expression: float_expression . PLUS float_expression
   15                 | float_expression . MINUS float_expression
   16                 | float_expression . MULT float_expression
   16                 | float_expression MULT float_expression .
   17                 | float_expression . DIV float_expression
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression

    $default  reduce using rule 16 (float_expression)


State 44

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   22 float_expression: float_expression DIV expression .
   23                 | expression . PLUS float_expression
   24                 | expression . MINUS float_expression
   25                 | expression . MULT float_expression
   26                 | expression . DIV float_expression

    $default  reduce using rule 22 (float_expression)


State 45

   14 float_expression: float_expression . PLUS float_expression
   15                 | float_expression . MINUS float_expression
   16                 | float_expression . MULT float_expression
   17                 | float_expression . DIV float_expression
   17                 | float_expression DIV float_expression .
   19                 | float_expression . PLUS expression
   20                 | float_expression . MINUS expression
   21                 | float_expression . MULT expression
   22                 | float_expression . DIV expression

    $default  reduce using rule 17 (float_expression)


State 46

    7 expression: expression . PLUS expression
    7           | expression PLUS expression .
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression

    MULT  shift, and go to state 26
    DIV   shift, and go to state 27

    $default  reduce using rule 7 (expression)


State 47

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    8           | expression MINUS expression .
    9           | expression . MULT expression
   10           | expression . DIV expression

    MULT  shift, and go to state 26
    DIV   shift, and go to state 27

    $default  reduce using rule 8 (expression)


State 48

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
    9           | expression MULT expression .
   10           | expression . DIV expression

    $default  reduce using rule 9 (expression)


State 49

    7 expression: expression . PLUS expression
    8           | expression . MINUS expression
    9           | expression . MULT expression
   10           | expression . DIV expression
   10           | expression DIV expression .

    $default  reduce using rule 10 (expression)
